tests/ui/parser/issues/issue-70583-block-is-empty-2.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-70583-block-is-empty-2.rs:16:1
   |
LL |         match self {
   |                    - this delimiter might not be properly closed...
LL |
LL |             ErrorHandled::Reported => {}}
   |                                       --- ...as it matches this but it has different indentation
   |                                       |
   |                                       block is empty, you might have not meant to close it
...
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 1 previous error

